# mutalyzer

./: .gitignore  README.md  README.rst  requirements.txt  requirements_dev.txt  sandbox.py  setup.cfg  setup.py
.github/workflows/: ci.yml
apis/: flask_raw.py  flask_restplus_based.py
docs/: .readthedocs.yml  cli.rst  conf.py  index.rst  install.rst  usage.rst
mutalyzer/: __init__.py  algebra.py  back_translator.py  checker.py  cli.py  description.py  description_extractor.py  description_model.py  errors.py  infos.py  mapper.py  name_checker.py  normalizer.py  position_converter.py  protein.py  reference.py  rna.py  spdi_converter.py  util.py  validation.py  viewer.py
mutalyzer/converter/: __init__.py  extras.py  to_delins.py  to_hgvs_coordinates.py  to_hgvs_indexing.py  to_internal_coordinates.py  to_rna.py  variants_de_to_hgvs.py
normalizer/: __init__.py  algebra.py  back_translator.py  checker.py  cli.py  converter.py  description.py  description_extractor.py  description_model.py  errors.py  infos.py  lifter.py  mapper.py  mutator.py  name_check.py  name_checker.py  normalizer.py  position_check.py  position_convert.py  position_converter.py  protein.py  reference.py  references.py  spdi_converter.py  to_description.py  util.py  validation.py  viewer.py  visualization.py
normalizer/api/: __init__.py  api.py  back_translate.py  common.py  compare.py  description_extract.py  description_to_model.py  get_selectors.py  lift.py  map.py  mutate.py  name_check.py  position_convert.py  reference_model.py  related_references.py  spdi_converter.py  syntax_check.py  view_variants.py
normalizer/api/static/: index.html
normalizer/api/static/css/: app.0d501308.css  app.242b43ed.css  app.2932fc4b.css  app.34782284.css  app.57c62e14.css  app.7884ee2c.css  app.97bdd009.css  app.aa1393c2.css  app.b380bab7.css  app.e6b8b33f.css  app.ea2c826c.css  app.edddaf11.css  app.f1410429.css  chunk-vendors.468c4eed.css  chunk-vendors.5de821f3.css  chunk-vendors.6abea675.css  chunk-vendors.77bdd658.css
normalizer/api/static/js/: app.13b2c662.js  app.13b2c662.js.map  app.14f2cd1a.js  app.14f2cd1a.js.map  app.2250e695.js  app.2250e695.js.map  app.28a29504.js  app.28a29504.js.map  app.47670de8.js  app.47670de8.js.map  app.5a1f79d7.js  app.5a1f79d7.js.map  app.8476e2d1.js  app.8476e2d1.js.map  app.8cf01608.js  app.8cf01608.js.map  app.ab797848.js  app.ab797848.js.map  app.b48c047b.js  app.b48c047b.js.map  app.b5a8918c.js  app.b5a8918c.js.map  app.bac0e301.js  app.bac0e301.js.map  app.e060ee4c.js  app.e060ee4c.js.map  app.e59c91a0.js  app.e59c91a0.js.map  chunk-vendors.111b589b.js  chunk-vendors.111b589b.js.map  chunk-vendors.409eb0fc.js  chunk-vendors.409eb0fc.js.map  chunk-vendors.7e8df3b3.js  chunk-vendors.7e8df3b3.js.map  chunk-vendors.b64c99db.js  chunk-vendors.b64c99db.js.map  chunk-vendors.d5dbeb50.js  chunk-vendors.d5dbeb50.js.map  chunk-vendors.e95fc850.js  chunk-vendors.e95fc850.js.map  (+4 more)
normalizer/api/templates/: index.html
normalizer/converter/: __init__.py  extras.py  to_cds_coordinate.py  to_delins.py  to_hgvs.py  to_hgvs_coordinates.py  to_hgvs_indexing.py  to_hgvs_locations.py  to_internal.py  to_internal_coordinates.py  to_internal_indexing.py  to_rna.py  variants_de_to_hgvs.py
normalizer/entrypoints/: api.py  cli.py
scripts/: rna_sandbox.py
tests/: commons.py  conftest.py  generator.py  m2.py  test_algebra.py  test_back_translator.py  test_checker.py  test_converter.py  test_description.py  test_dna_to_rna.py  test_ensembl.py  test_mapper.py  test_name_check.py  test_name_check_alt.py  test_normalizer.py  test_normalizer_alt.py  test_normalizer_other.py  test_position_convert.py  test_protein.py  test_reference.py  test_rna.py  test_rna_alt.py  test_set.py  test_spdi_converter.py  test_to_description.py  test_viewer.py  variants_set.py
tests/data/: ENSG00000184937.16.fasta  ENSG00000184937.16.gff3  ENSG00000204370.13.fasta  ENSG00000204370.13.gff3  ENST00000375549.8.gff3  ENST00000375549.fasta  ENST00000452863.10.fasta  ENST00000452863.10.gff3  LRG_1  LRG_199  LRG_24  LRG_303  NC_000011.10.fasta  NC_000011.10.gff3  NC_012920.1.fasta  NC_012920.1.gff3  NG_007107.2.fasta  NG_007107.2.gff3  NG_007107.2.sequence  NG_007485.1.fasta  NG_007485.1.gff3  NG_007485.1.sequence  NG_008376.4.fasta  NG_008376.4.gff3  NG_008835.1.fasta  NG_008835.1.gff3  NG_008835.1.sequence  NG_008939.1.fasta  NG_008939.1.gff3  NG_009113.2.fasta  NG_009113.2.gff3  NG_009113.2.sequence  NG_009299.1.fasta  NG_009299.1.gff3  NG_009497.1.fasta  NG_009497.1.gff3  NG_009497.1.sequence  NG_009930.1.fasta  NG_009930.1.gff3  NG_012337.1.fasta  (+57 more)
