[metadata]
name = mutalyzer_normalizer
version = 0.0.1
description = Mutalyzer HGVS variant description normalizer.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mihai Lefter
author_email = M.Lefter@lumc.nl
url = https://github.com/mutalyzer/normalizer
keywords = Mutalyzer, HGVS
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    mutalyzer-hgvs-parser==0.2.0
;    mutalyzer-hgvs-parser @ git+https://github.com/mutalyzer/hgvs-parser.git@protein#egg=mutalyzer-hgvs-parser
    mutalyzer-retriever==0.2.1
;    mutalyzer-retriever @ git+https://github.com/mutalyzer/retriever.git@protein#egg=mutalyzer-retriever
    mutalyzer-mutator==0.2.0
    mutalyzer_crossmapper==2.0.0
    mutalyzer-backtranslate==0.1.4
    flask-restx==0.4.0
    Flask-Cors==3.0.10
    description_extractor @ git+https://github.com/mutalyzer/description-extractor.git@mutalyzer3#egg=description_extractor
tests_require =
   pytest==6.2.2

[options.entry_points]
console_scripts =
    normalizer-cli = normalizer.entrypoints.cli:main
    normalizer-api = normalizer.entrypoints.api:main

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 89
max-complexity = 18
select = B, C, E, F, W, T4, B9

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[testenv]
deps = pytest
commands = pytest

[tox:tox]
envlist = py35
