[metadata]
name = mutalyzer
version = 0.0.1
description = Mutalyzer HGVS variant description tools.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mihai Lefter
author_email = M.Lefter@lumc.nl
url = https://github.com/mutalyzer/mutalyzer
keywords = Mutalyzer, HGVS
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    mutalyzer-hgvs-parser==0.2.0
;    mutalyzer-hgvs-parser @ git+https://github.com/mutalyzer/hgvs-parser.git@protein#egg=mutalyzer-hgvs-parser
    mutalyzer-spdi-parser @ git+https://github.com/mutalyzer/spdi-parser.git@master#egg=mutalyzer-spdi-parser
    mutalyzer-retriever==0.2.4
;    mutalyzer-retriever @ git+https://github.com/mutalyzer/retriever.git@protein#egg=mutalyzer-retriever
    mutalyzer-mutator==0.2.0
    mutalyzer_crossmapper==2.0.0
    mutalyzer-backtranslate==0.1.4
    description_extractor @ git+https://github.com/mutalyzer/description-extractor.git@mutalyzer3#egg=description_extractor
    mutalyzer-algebra==0.2.0
tests_require =
   pytest==6.2.2

[options.entry_points]
console_scripts =
    mutalyzer-name-checker = mutalyzer.cli:main

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 89
max-complexity = 18
select = B, C, E, F, W, T4, B9

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[testenv]
deps = pytest
commands = pytest

[tox:tox]
envlist = py35
