[metadata]
name = mutalyzer
version = 3.0.0a2.dev
description = Mutalyzer HGVS variant description tools.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mihai Lefter
author_email = M.Lefter@lumc.nl
url = https://github.com/mutalyzer/mutalyzer
keywords = Mutalyzer, HGVS
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    mutalyzer-hgvs-parser==0.3.3
    mutalyzer-spdi-parser==0.3.0
    mutalyzer-retriever==0.2.9
    mutalyzer-mutator==0.2.0
    mutalyzer_crossmapper==2.0.1
    mutalyzer-backtranslate==1.0.0
    description-extractor==3.0.0
    mutalyzer-algebra==1.1.1
tests_require =
   pytest

[options.entry_points]
console_scripts =
    mutalyzer_name_checker = mutalyzer.cli:main

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 89
max-complexity = 18
select = B, C, E, F, W, T4, B9

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[testenv]
deps = pytest
commands = pytest

[tox:tox]
envlist = py36
